0.44    17 November 2004
        Remove all traces of display_categories, which was obsoleted but
          not completely removed before.
        Improved the efficiency of the search.
        Fixed a couple of minor bugs in the search - note that node.tt
          and supersearch.tt have changed.
        Change the default indexer for new installs to Plucene.	
        Only run certain search-related tests if Plucene is installed.

0.43    21 October 2004
        Fix broken navbar changes that crept into last release.

0.42    20 October 2004
        Handle distance searching with OpenGuides::Supersearch instead of
          find_within_distance action.
        Fixed bug with paging on distance-only search (reported by Bob Walker).
        Improved encapsulation in OpenGuides::Supersearch - accessors.
        *INCOMPATIBLE CHANGE* Custom templates are now stored in
          user-definable path, and their names are prefixed with custom_.
          This only affects you if you have used the custom template support
          introduced in 0.41.
        Replace use of CGI::Wiki::Plugin::Geocache with improved node.tt.

0.41    21 September 2004
        Added backlinks link to navbar.
        Added some anti-robot tags to certain pages.
        Fixed bug in install procedure - blank script_name should now get
          installed as index.cgi
        Added option of munging in custom lib paths on install.
        Added option of custom templates for footer, license warning
          on edit form, banner at top of page (see CUSTOMISATION file
          for details).
        Added new macro - used as eg @INDEX_LIST [[Locale Fulham]]
        Also fixed the RSS reader macro - use this as eg
          @RSS http://london.openguides.org/?action=rss;username=Kake
        More semantic markup for metadata display - see README.CSS

0.40    18 September 2004
        Recent Changes now shows changes in the past 24 hours, past week,
          past fortnight, and past 30 days.